Issue #22 : Added an option for dashboard table columns to wrap text.

--- a/stroom-core-client-widget/src/main/resources/stroom/data/grid/client/DataGrid.css
+++ b/stroom-core-client-widget/src/main/resources/stroom/data/grid/client/DataGrid.css
@@ -101,6 +101,10 @@
 	user-select: initial;	
 }
 
+.dataGridCellWrapText {
+    white-space: normal;
+}
+
 .dataGridFirstColumnFooter {
 	
 }
